--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/AllUsersWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/AllUsersWindow.xaml
@@ -39,6 +39,7 @@
                 <!--Dugmici-->
             </Grid>
             <materialDesign:Snackbar 
+                    Panel.ZIndex="1"
                     Height="40" 
                     VerticalAlignment="Top" 
                     HorizontalAlignment="Center"
