--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/ProfileWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/ProfileWindow.xaml
@@ -43,7 +43,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="80"></RowDefinition>
                         <RowDefinition Height="30"></RowDefinition>
-                        <RowDefinition Height="70"></RowDefinition>
+                        <RowDefinition Height="50"></RowDefinition>
                         <RowDefinition Height="50"></RowDefinition>
                         <RowDefinition Height="50"></RowDefinition>
                         <RowDefinition Height="50"></RowDefinition>
@@ -115,18 +115,33 @@
                                  IsReadOnly="True"
                                  SelectionBrush="#FF8BC34A" ></TextBox>
                     </StackPanel>
-                    <TextBox x:Name="txtEmail" Grid.Row="3"
+                    <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBox x:Name="txtEmail"
                                  materialDesign:HintAssist.Hint="Email"
                                  HorizontalAlignment="Center"
-                                 Width="300"
+                                 Width="130"
                                  HorizontalContentAlignment="Left"
                                  Text="{Binding User.Email, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                  Height="45"
                                  MaxLength="40"
+                                 Margin="0,0,17,0"
                                  ToolTip="Example: test@test.com"
                                  IsReadOnly="True"
                                  SelectionBrush="#FF8BC34A" />
+                        <TextBox x:Name="txtUsername" 
+                                 HorizontalAlignment="Right"
+                                 materialDesign:HintAssist.Hint="Username"
+                                 Width="130"                              
+                                 HorizontalContentAlignment="Left"
+                                 Text="{Binding User.Username, UpdateSourceTrigger=PropertyChanged}"
+                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                 Height="45"
+                                 Margin="17,0,0,0"
+                                 MaxLength="40"
+                                 IsReadOnly="True"
+                                 SelectionBrush="#FF8BC34A" ></TextBox>
+                    </StackPanel>
                     <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center">
                         <TextBox x:Name="txtDateOfBirth" 
                                  HorizontalAlignment="Left"
@@ -272,7 +287,7 @@
                                             HorizontalAlignment="Left"
                                             Width="100"
                                             Foreground="White"
-                                            Visibility="{Binding UserID, Converter={StaticResource LikeButtonVisibleConverter}}"
+                                            Visibility="{Binding PostID, Converter={StaticResource LikeButtonVisibleConverter}}"
                                             Command="{Binding DataContext.LikePost, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}"
                                             IsEnabled="{Binding PostID, Converter={StaticResource CanLikeConverter}}"
                                             Height="30"
