--- a/Nedeljni_V_Kristina_Garcia_Francisco/View/UserPostsWindow.xaml
+++ b/Nedeljni_V_Kristina_Garcia_Francisco/View/UserPostsWindow.xaml
@@ -57,6 +57,7 @@
                         BorderBrush="{x:Null}"></Button>
             </Grid>
             <materialDesign:Snackbar 
+                    Panel.ZIndex="1"
                     Height="40" 
                     VerticalAlignment="Top" 
                     HorizontalAlignment="Center"
@@ -112,21 +113,6 @@
                                            FontWeight="Light"
                                            TextWrapping="Wrap"></TextBlock>
                                         <StackPanel Grid.Row="2" Orientation="Horizontal">
-                                            <Button x:Name="btnLikePost"
-                                            Style="{StaticResource MaterialDesignRaisedButton}"
-                                            materialDesign:ButtonAssist.CornerRadius="20"
-                                            ToolTip="Like Post"
-                                            Margin="20,0,0,10"
-                                            HorizontalAlignment="Left"
-                                            Width="100"
-                                            Foreground="White"
-                                            Command="{Binding DataContext.LikePost, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
-                                            IsEnabled="{Binding PostID, Converter={StaticResource CanLikeConverter}}"
-                                            Height="30"
-                                            Background="#FF8BC34A"
-                                            VerticalAlignment="Bottom"
-                                            Content="{Binding PostID, Converter={StaticResource LikeButtonContentConverter}}"
-                                            BorderBrush="{x:Null}"></Button>
                                             <TextBlock 
                                            Margin="20 0 0 0"
                                            FontSize="12"
